# quant-lab

./: .env.example  .gitignore  README.md  pyproject.toml
projects/dart-event-study/: PLAN.md  README.md  RELIABILITY_AUDIT.md  pyproject.toml
projects/dart-event-study/config/: settings.yaml  toss_universe.yaml  universe.yaml
projects/dart-event-study/docs/: data_feasibility.md  source_comparison.md  spam_filter_report.md  spam_labeling_guide.md  toss_collection.md  toss_universe.md
projects/dart-event-study/labels/: spam_labels_300.csv
projects/dart-event-study/notebooks/: journey.ipynb  report.ipynb
projects/dart-event-study/scripts/: reset_deleted.py  toss_crawl_run.ps1  toss_schedule_install.ps1
projects/dart-event-study/src/dart_event_study/: __init__.py  __main__.py  collect.py  config.py
projects/dart-event-study/src/dart_event_study/analysis/: attention.py  backtest.py  caar_tests.py  event_study.py  interaction.py  (+1 more)
projects/dart-event-study/tests/: test_backtest_engine.py  test_board.py  test_caar_tests.py  test_calendar.py  test_cli.py  test_costs_schedule.py  test_dart_client.py  test_delisting.py  test_earnings_parser.py  test_event_rules.py  test_event_study.py  test_interaction.py  test_scaffold.py  test_sentiment.py  test_significance.py  test_suspension_roll.py  test_timing.py  test_toss_deletions.py  test_toss_store.py  test_trust_buyback.py
shared/: pyproject.toml
shared/quantlab_shared/: __init__.py
shared/quantlab_shared/backtest/: costs.py  engine.py  metrics.py
shared/quantlab_shared/data/: calendar.py  prices.py  universe.py
(+23 files in other folders)
