[project]
name = "quantlab-shared"
version = "0.1.0"
description = "quant-lab 공용 라이브러리: 가격 데이터 로더, 영업일 캘린더, 백테스트 엔진, 성과지표, 거래비용 모델"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "pykrx>=1.0.45",
    "finance-datareader>=0.9.50",
    "pyarrow>=15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["quantlab_shared"]
